# High-frequency-trading-simulator

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  RELEASE_NOTES.md  hawkes_baseline.ipynb  main.fdb_latexmk  main.fls  neural_hawkes.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake  hft_sim
configs/: backtest_demo.json
data/runs/: exp_events.csv  exp_events.json
data/runs/events/: BTCUSDT-2025-09-20-buys-marks-z.npy  BTCUSDT-2025-09-20-buys-marks.npy  BTCUSDT-2025-09-20-buys-times.npy  BTCUSDT-2025-09-21-buys-marks-z.npy  BTCUSDT-2025-09-21-buys-marks.npy  README.md  (+7 more)
data/sample/: lobster_demo.csv
docs/: 5_devlog.md  5_intro.md  EXPERIMENTS.md  USAGE.md  architecture.md  architecture.mmd  benchmark_protocol.md  benchmark_report.md  invariants.md  neural_hawkes_tutorial.ipynb  performance.md  performance_summary.md  research_primer.md  stress_tests.md  visual_index.md  week5_calibration.md  week5_comparison.md  week5_empirical.md  week6_execution_cost.md  week6_integration.md  week6_performance_optimization.md  week6_stability_tuning.md  week7_adaptive_simulation.md  week7_pnl_analytics.md  week7_strategy_simulation.md  week8_final_review.md  week8_integration.md  week8_stress_testing.md
docs/backtester/: pnl.md
docs/graphs/: cmake_graph.dot  cmake_graph.dot.hawkes_bridge  cmake_graph.dot.hawkes_example  cmake_graph.dot.hft_core.dependers  cmake_graph.dot.hft_sim  python_imports.dot
docs/notebooks/: binance_calibration.ipynb  synthetic_calibration.ipynb
docs/paper/: main.aux  main.fdb_latexmk  main.fls  main.tex  results.tex
docs/reports/: day14_btcusdt_bivar.md
experiments/: README.md  aggregate_results.py  run_matrix.py
experiments/configs/: README.md  binance_backbones.json  day14_binance.yaml  extended_backbones.json  lobster_backbones.json  multi_symbol_example.json
experiments/results/: binance_gru.json  binance_gru_long.json  binance_transformer.json  binance_transformer_long.json  lobster_gru.json  lobster_gru_long.json  lobster_transformer.json  lobster_transformer_long.json
experiments/summary/: ablation.csv  benchmarks.csv  benchmarks.md  diagnostics.md
include/spdlog/: spdlog.h
logs/: baseline_backtester.pstats  demo_run.jsonl  perf_baseline.jsonl  perf_instrumented.jsonl  stress_order_book.pstats
logs/benchmarks/: order_book_benchmarks.json
logs/perf_runs/: run_1x.jsonl
notebooks/: day14_binance_setup.ipynb  hft_simulator_tutorial.ipynb  robustness.ipynb
python/: __init__.py  bridge_utils.py  demo.py  io.py  io_utils.py  kernels.py  requirements.txt  simulate.py  streamlit_app.py  streamlit_app_backtest.py  timeline_dashboard.py  viz.py
python/.matplotlib/: fontlist-v390.json
python/analysis/: __init__.py  io.py  plots.py  profiling.py
python/backtester/: __init__.py  _order_book_bridge.py  backtester.py  concurrent.py  dashboard.py  itch.py  logging.py  order_book.py  queues.py  replay.py  reports.py  risk.py  risk_controls.py  run.py  strategy.py  stress.py  synthetic.py
python/order_flow/: __init__.py  calibration.py
python/perf/: __init__.py  architecture.py  benchmarks.py  schemas.py
python/scripts/: aggregate_stress_metrics.py  benchmark_architectures.py  build_windows.py  check_logs.py  generate_order_flow_synthetic.py  hawkes_validation.py  make_demo.py  run_benchmarks.py  run_hawkes_fit.py  run_risk_controls.py  run_stress_suite.py  run_week5_empirical.py  run_week5_robustness.py  run_week6_execution_cost.py  run_week7_adaptive_simulation.py  run_week7_pnl_analytics.py  run_week7_strategy_calibration.py  run_week8_optimizations.py  run_week8_realtime_validation.py  run_week8_stress_tests.py  visualize_backtest.py
python/strategies/: __init__.py  market_maker.py
reports/: week4_summary.md
results/week4/: README.md
results/week6/: execution_cost_aggressiveness_curve.csv  execution_cost_analysis.csv  execution_cost_summary.json  parallel_benchmarks.csv  performance_benchmark.csv  simulation_arrivals.csv  simulation_arrivals_intensity.csv  simulation_summary.json  stress_test_debug.csv  stress_test_metrics.csv
results/week7/: adaptive_meta.json  adaptive_sim_results.csv  best_configs.json  binance_futures_regime_trace.csv  concurrent_summary.json  nasdaq_micro_regime_trace.csv  pnl_breakdown.csv  pnl_risk_metrics.csv  strategy_calibration.csv
results/week8/: fault_tolerance.csv  oms_validation.csv  optimized_perf.csv  realtime_loop_metrics.csv  regression_report.csv  resource_profile.txt  system_perf.csv
scripts/: collect_runs.py  generate_dependency_graphs.py  generate_flamegraph.py  hawkes_calibration_analysis.py  make_demo.sh  pack_binance_npz.py  prepare_summary_assets.py  preprocess_binance.py  preprocess_lobster.py  run_ci_checks.sh
src/: Order.hpp  OrderBook.cpp  OrderBook.hpp  adaptive_engine.cpp  adaptive_engine.hpp  engine_runtime.cpp  engine_runtime.hpp  error.hpp  event_engine.cpp  event_engine.hpp  execution_cost.cpp  execution_cost.hpp  execution_engine.cpp  hawkes.hpp  hawkes_c_api.cpp  hawkes_core.cpp  hawkes_engine.cpp  hawkes_engine.hpp  hawkes_example.cpp  hawkes_mle_cli.cpp  hawkes_validation.cpp  impact_calibration.cpp  latency_model.hpp  main.cpp  matching_engine.cpp  matching_engine.hpp  memory_pool.hpp  order_book_c_api.cpp  pnl_analysis.cpp  simulator_core.cpp  simulator_core.hpp  week8_system_integration.cpp
src/hawkes/: __init__.py  diagnostics.py  exp_bivar.py  fit.py  io.py  pow_bivar.py
src/order_flow/: HawkesMLE.hpp  OrderFlow.cpp  OrderFlow.hpp  hawkes_mle.cpp
src/perf/: Benchmark.cpp  Profiler.cpp  Profiler.hpp  ScopedTimer.hpp  StressTest.cpp
tests/: conftest.py  execution_cost_test.cpp  hawkes_mle_test.cpp  order_tests.cpp  test_main.cpp  test_neural_hawkes.py
tests/data/: itch_sample.csv
tests/python/: conftest.py  test_backtester.py  test_concurrent.py  test_dashboard.py  test_latency.py  test_order_types.py  test_replay.py  test_risk_controls.py  test_risk_engine.py  test_strategy_market_maker.py  test_strategy_modular.py  test_stress.py  test_synthetic.py
(+221 files in other folders)
